edit contest button color

--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -81,7 +81,7 @@ SOFTWARE.
             </button>
           </a>
           <a href="{% url 'contest:edit' contest.id %}">
-            <button type="button" class="btn btn-info btn-xs">
+            <button type="button" class="btn btn-warning btn-xs">
               <span class="glyphicon glyphicon-pencil"></span>
             </button>
           </a>
