--- a/problem/templates/problem/editTab/info.html
+++ b/problem/templates/problem/editTab/info.html
@@ -21,9 +21,25 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
-<table>
-{{ form.as_table }}
-</table>
+<form action="." method="POST">
+  {% csrf_token %}
+  {% for field in form %}
+    {% if field.label_tag == form.visible.label_tag %}
+      <div class="fieldWrapper checkbox">
+        {{ field.errors }}
+        <label>
+        {{ field }} Visible
+        </label>
+        </div>
+      {% else %}
+        <div class="fieldWrapper form-group">
+        {{ field.errors }}
+        {{ field.label_tag }}
+        {{ field }}
+      </div>
+    {% endif %}
+  {% endfor %}
+</form>
 <br>
 <br>
 <br>
