Auto logout after a registration complete and remind user to go to mailbox to active his account when inactive logging in

--- a/users/templates/users/auth.html
+++ b/users/templates/users/auth.html
@@ -24,7 +24,7 @@ SOFTWARE.
 {% extends "index/base.html" %}
 {% load static %}
 {% block import_source %}
-<script>
+<script type="text/javascript">
 function active_link() {
     message = 'Please go to your mailbox and click the confirmation link' + 
     '\;otherwise , your account would not be activated!';
