more clarification column. add clarification form. functionize add attribute in function.js

--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -26,6 +26,7 @@ SOFTWARE.
 {% block import_source %}
 <link href="{% static 'contest/css/contest.css' %}" rel="stylesheet">
 <script src="{%static 'contest/js/contest.js'%}"></script>
+<script src="{%static 'contest/js/function.js'%}"></script>
 {% endblock import_source %} 
 
 {% block body_block %}
