--- a/contest/templates/contest/clarification.html
+++ b/contest/templates/contest/clarification.html
@@ -17,6 +17,11 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
+{% load staticfiles %} 
+{% block import_source %}
+<script src="{%static 'contest/js/clarification.js'%}"></script>
+<script src="{%static 'contest/js/function.js'%}"></script>
+{% endblock import_source %}
 <div class="modal fade" id="clarification" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -28,22 +33,20 @@ SOFTWARE.
         <h4 class="modal-title" id="myModalLabel">Ask Question</h4>
       </div>
       <div class="modal-body">
-        <form role="form">
+        <form action="" method="post" role="form">
+          {{ form.contest.as_hidden }}
+          {{ form.asker.as_hidden }}
           <label for="pid">Problem name</label>
-          <div id="pid" class="form-group">
-            <select class="form-control">
-              {% for problem in contest.problem.all %}
-              <option>{{ problem.pname }}</option>
-              {% endfor %}
-            </select>
+          <div id="pid" class="fieldWrapper form-group">
+             {{ form.problem }}
           </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Description</label>
-            <textarea type="text" class="form-control" id="exampleInputPassword1" placeholder="Problem Description"></textarea>
+          <div class="form-group fieldWrapper">
+            <label>Description</label>
+            {{ form.content }}
           </div>
           <div class="checkbox">
             <label>
-              <input type="checkbox">For All Teams
+              {{ form.reply_all }}reply all
             </label>
           </div>
         </form>
