move inline style to index.css

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -190,11 +190,10 @@ SOFTWARE.
     </div>
     <!-- footer -->
     <div class="footer sticky-footer">
-      <a href="" class="p11" style="position:relative;left:30px;">Contact us</a>
-      <p class="p10" style="position:relative;left:400px;">
+      <a href="" id="contact_us">Contact us</a>
+      <p id="footer_text">
       © NTHU Online Judge 2014, Templates are from Bootstrap Project</p>
-      <p id='time'
-      style="font-size: 18px;color:white;position:relative;float:right;right:30px;">
+      <p id='time'>
       {{ tstr }}
       </p>
     </div>
