remove unused filter. __len__ modified to len().

--- a/contest/templates/contest/scoreboard.html
+++ b/contest/templates/contest/scoreboard.html
@@ -98,7 +98,7 @@ SOFTWARE.
             <td>{{ forloop.counter }}</td>
             <td>{{ user.username }}</td>
             {% for problem in user.problems %}
-            <td>{{ problem|is_solved }}/{{ problem|submit_times }}</td>
+            <td>{{ problem|penalty:scoreboard.start_time }}/{{ problem|submit_times }}</td>
             {% endfor %}
             <td>{{ user|problem_solved }}</td>
             <td>{{ user|penalty:scoreboard.start_time }}</td>
