--- a/problem/templates/problem/problem_list.html
+++ b/problem/templates/problem/problem_list.html
@@ -34,18 +34,21 @@ SOFTWARE.
     {% for p in problem%}
       <tr>
         <td>
-          <span id='rejudge' class='glyphicon glyphicon-refresh' 
-          data-toggle="tooltip" data-placement="left" title="Rejudge"></span>&nbsp;{{p.pid}}</td>
-        <td><a href="{% url 'problem:problem.views.detail' p.pid %}">{{p.name}}</a>&nbsp;
-          <a href="{% url 'problem:problem.views.edit' p.pid %}">
-            <span id='edit' class='glyphicon glyphicon-pencil' 
-            data-toggle="tooltip" data-placement="right" title="Edit"></span>
-          </a>
+          {% if user == p.owner or user.is_admin %}
+            <span id='rejudge' class='glyphicon glyphicon-refresh' 
+            data-toggle="tooltip" data-placement="left" title="Rejudge"></span>
+          {% endif %}
+          &nbsp;{{p.pk}}
         </td>
-        <script>
-        $("#rejudge").tooltip('hide');
-        $("#edit").tooltip('hide');
-        </script>
+
+        <td><a href="{% url 'problem:problem.views.detail' p.pk %}">{{p.pname}}</a>&nbsp;
+          {% if user == p.owner or user.is_admin %}
+            <a href="{% url 'problem:problem.views.edit' p.pk %}">
+              <span id='edit' class='glyphicon glyphicon-pencil' 
+              data-toggle="tooltip" data-placement="right" title="Edit"></span>
+            </a>
+          {% endif %}
+        </td>
         <td>
           <div class="progress">
             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{p.pass}}" aria-valuemin="0" aria-valuemax="100" style="width: {{p.pass}}%;">
@@ -57,7 +60,9 @@ SOFTWARE.
           </div>
         </td>
         <td>
-          <button class="btn btn-primary">Delete</button>
+          {% if user == p.owner or user.is_admin %}
+            <a data-target="{{p.pk}}" class="btn btn-primary" href="{% url 'problem:delete_problem' p.pk %}">Delete</a>
+          {% endif %}
         </td>
       </tr>
     {% endfor %}
