--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -26,7 +26,6 @@ SOFTWARE.
 {% block import_source %}
 <link href="{% static 'contest/css/contest.css' %}" rel="stylesheet">
 <script src="{%static 'contest/js/contest.js'%}"></script>
-<script src="{%static 'contest/js/function.js'%}"></script>
 {% endblock import_source %} 
 
 {% block body_block %}
@@ -69,7 +68,7 @@ SOFTWARE.
               <th>#</th>
               <th>Problem</th>
               <th>Asker</th>
-              <th>Question</th>
+              <th>Description</th>
               <th>Reply</th>
               <th>Replyer</th>
               <th>Reply Time</th>
