--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -39,6 +39,7 @@ SOFTWARE.
     href="http://bootswatch.com/assets/css/bootswatch.min.css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js">
     </script>
+    <script src={%static './js/function.js'%}></script>
     <!-- Magnific Popup core JS & CSS -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/magnific-popup.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/jquery.magnific-popup.min.js">
