debug. can show problem properly. can add clarification properly.

--- a/contest/templates/contest/clarification.html
+++ b/contest/templates/contest/clarification.html
@@ -36,7 +36,7 @@ SOFTWARE.
           <div class="form-group" style="width:50%">
             Problem name {{ form.problem }}
           </div>
-          <div class="form-group fieldWrapper">
+          <div class="form-group">
             <label>Description</label>
             {{ form.content }}
           </div>
