Testcases scoreboard single problem Total now display total passed testcases

--- a/contest/templates/contest/scoreboard.html
+++ b/contest/templates/contest/scoreboard.html
@@ -69,7 +69,7 @@ SOFTWARE.
             <td></td>
             {% for problem in scoreboard.problems %}
               <td>
-                {{ problem.pass_user }}
+                {{ problem.total_solved }}
               </td>
             {% endfor %}
             <td></td>
