--- a/index/static/css/index.css
+++ b/index/static/css/index.css
@@ -260,11 +260,28 @@ textarea#inputSmall {
 }
 #notification{
   padding: 0px;
+  height: 50px;
+  width: 50px;
 }
 #notification_img{
   cursor: pointer;
   height: 50px;
-  width: 50px;  
+  width: 50px;
+}
+#notification_circle{
+  position: relative;
+  top :-40px;  
+  background-color: #4490DB;  
+  height: 20px;
+  width: 20px;
+  border-radius: 25px;
+  text-align: center;  
+}
+#number{
+  color: white;
+  font-size: 10px;
+  -webkit-transform:scale(0.83);
+  display: inline-block;
 }
 .err1 {
   font-size: 120px;
