--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -30,28 +30,23 @@ SOFTWARE.
     {% block title_name %}
     {% endblock title_name %}
     <!-- necessarily jQeuery -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
-    </script>
+    <script src={% static "jquery/dist/jquery.min.js" %}></script>
     <!-- bootstrap, bootwatch JS & CSS -->
     {% if not theme %}
-    <link rel="stylesheet"
-    href="http://bootswatch.com/paper/bootstrap.css" media="screen">
+    <link rel="stylesheet" href={% static "bootswatch/paper/bootstrap.css" %} media="screen">
     {% else %}
-    <link rel="stylesheet"
-    href="http://bootswatch.com/{{theme}}/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="{% static '' %}bootswatch/{{theme}}/bootstrap.css" media="screen">
     {% endif %}
-    <link rel="stylesheet"
-    href="http://bootswatch.com/assets/css/bootswatch.min.css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js">
-    </script>
+    <link rel="stylesheet" href={% static "bootstrap/dist/css/bootstrap.min.css" %}>
+    <script src={% static "bootstrap/dist/js/bootstrap.min.js" %}></script>
     <!-- Magnific Popup core JS & CSS -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/magnific-popup.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/jquery.magnific-popup.min.js">
-    </script>
-    <link rel="stylesheet" href={% static "./css/mfp-fade.css"%}>
-    <script src={% static "./js/popup-setting.js"%}></script>
-    <script src={% static "./js/index.js"%}></script>
-    <link rel="stylesheet" href={% static "./css/index.css"%} media="screen">
+    <link rel="stylesheet" href={% static "magnific-popup/dist/magnific-popup.css" %}>
+    <script src={% static "magnific-popup/dist/jquery.magnific-popup.min.js" %}></script>
+    <script src={% static "js/popup-setting.js" %}></script>
+    <script src={% static "js/index.js" %}></script>
+    <link rel="stylesheet" href={% static "css/index.css" %} media="screen">
+    <link rel="stylesheet" href={% static "css/mfp-fade.css" %} media="screen">
+
     {% block import_source %}
     {% endblock import_source %}
   </head>
