--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -169,7 +169,7 @@ SOFTWARE.
           <li>
             <a href={% url "users:notification" %} id="notification">
               {% if amount > 0 %}
-              <img src={% static "./images/14.png "%} id="notification_img"
+              <img src={% static "./images/bell_blue.png "%} id="notification_img"
                    title="You have {{ amount }} unread notifications."/>
               <div id="notification_circle">
                 <b id="number">
@@ -181,7 +181,7 @@ SOFTWARE.
                 </b>
               </div>
               {% else %}
-              <img src={% static "./images/14.png "%} id="notification_img"
+              <img src={% static "./images/bell_gray.png "%} id="notification_img"
                    title="You have no unread notifications."/>
               {% endif %}
             </a>
