--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -27,7 +27,7 @@ SOFTWARE.
 
 {% block body_block %}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script>
+<script src={% static "Chart.js/Chart.js" %}></script>
 <script src={% static "js/piechartsettings.js"%}></script>
 <script type="text/javascript">
 $(function() {
