--- a/status/templates/status/status.html
+++ b/status/templates/status/status.html
@@ -26,8 +26,9 @@ SOFTWARE.
 {% load status_filters %}
 
 {% block body_block %}
-<link rel="stylesheet" href={% static "jquery-ui/themes/dark-hive/jquery-ui.min.css" %}>
-<script src={% static "jquery-ui/jquery-ui.min.js" %}></script>
+<link rel="stylesheet" href={% static "jquery-ui/themes/dark-hive/jquery-ui.css" %}>
+<script src={% static "jquery-ui/ui/jquery-ui.js" %}></script>
+
 <script type="text/javascript">
   $(function () {
     $(document).tooltip({
