--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -35,7 +35,7 @@ SOFTWARE.
     {% if user.is_authenticated %}
     <link rel="stylesheet" href="{% static '' %}bootswatch/{{user.theme}}/bootstrap.css">
     {% else %}
-    <link rel="stylesheet" href="{% static '' %}bootswatch/paper/bootstrap.css">
+    <link rel="stylesheet" href={% static "bootswatch/paper/bootstrap.css" %}>
     {% endif %}
     <script src={% static "bootstrap/dist/js/bootstrap.min.js" %}></script>
     <!-- Magnific Popup core JS & CSS -->
