--- a/users/templates/users/code_editor.html
+++ b/users/templates/users/code_editor.html
@@ -25,16 +25,28 @@ SOFTWARE.
 <!-- code mirror related -->
 <link rel="stylesheet" href={% static "codemirror/lib/codemirror.css" %}>
 <link rel="stylesheet" href={% static "codemirror/theme/solarized.css" %}>
+<link rel="stylesheet" href={% static "codemirror/addon/dialog/dialog.css" %}>
 <script src={% static "codemirror/lib/codemirror.js" %}></script>
-<script src={% static "codemirror/addon/selection/active-line.js" %}></script>
+<script src={% static "codemirror/addon/comment/comment.js" %}></script>
+<script src={% static "codemirror/addon/dialog/dialog.js" %}></script>
+<script src={% static "codemirror/addon/edit/closebrackets.js" %}></script>
 <script src={% static "codemirror/addon/edit/matchbrackets.js" %}></script>
+<script src={% static "codemirror/addon/search/search.js" %}></script>
+<script src={% static "codemirror/addon/search/searchcursor.js" %}></script>
+<script src={% static "codemirror/addon/selection/active-line.js" %}></script>
+<script src={% static "codemirror/addon/display/placeholder.js" %}></script>
+<script src={% static "codemirror/keymap/sublime.js" %}></script>
 <script src={% static "codemirror/mode/clike/clike.js" %}></script>
-<script src={% static "codemirror/addon/selection/active-line.js" %}></script>
-<script src={% static "codemirror/addon/edit/matchbrackets.js" %}></script>
-
+<!-- custom settings -->
 <script src={% static "js/editorsettings.js" %}></script>
 <!-- file input -->
 <script src={% static "bootstrap.file-input/index.js" %}></script>
+<style>
+  .CodeMirror-matchingbracket {
+    outline: 1px solid gray;
+    color: black !important;
+}
+</style>
 <div class="container">
   <h3>Submit Code</h3>
   <form class="form-horizontal" action="/users/submit/" method="post">
